Clean up GUI in Plugins Admin

--- a/PowerEditor/src/WinControls/PluginsAdmin/pluginsAdmin.rc
+++ b/PowerEditor/src/WinControls/PluginsAdmin/pluginsAdmin.rc
@@ -36,7 +36,7 @@
 IDD_PLUGINSADMIN_DLG DIALOGEX 36, 44, 500, 300
 STYLE DS_SETFONT | DS_3DLOOK | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
-CAPTION "Plugins Manager"
+CAPTION "Plugins Admin"
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
 	RTEXT           "Research: ",IDC_PLUGINADM_RESEARCH_STATIC,50,38,50,8
@@ -47,7 +47,10 @@ BEGIN
 	PUSHBUTTON      "Remove", IDC_PLUGINADM_REMOVE,432,35,57,14
 	//LISTBOX         IDC_PLUGINADM_LISTVIEW,30,20,78,120,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
 	EDITTEXT        IDC_PLUGINADM_EDIT,30,160,220,80,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | WS_BORDER | WS_VSCROLL
-	PUSHBUTTON      "Close", IDCANCEL,332,270,57,14
-    PUSHBUTTON      "Settings",IDC_PLUGINADM_SETTINGS_BUTTON,255,270,69,14
+	
+	PUSHBUTTON      "Close", IDCANCEL, 225, 270, 57, 14
+
+	//PUSHBUTTON      "Close", IDCANCEL,332,270,57,14
+    //PUSHBUTTON      "Settings",IDC_PLUGINADM_SETTINGS_BUTTON,255,270,69,14
 END
 
