Fix a "Frenglish" issue.

--- a/PowerEditor/src/WinControls/PluginsAdmin/pluginsAdmin.rc
+++ b/PowerEditor/src/WinControls/PluginsAdmin/pluginsAdmin.rc
@@ -39,8 +39,8 @@ EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Plugins Admin"
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-	RTEXT           "Research: ",IDC_PLUGINADM_RESEARCH_STATIC,50,38,50,8
-	EDITTEXT        IDC_PLUGINADM_RESEARCH_EDIT,160,35,150,14,ES_AUTOHSCROLL
+	RTEXT           "Search: ",IDC_PLUGINADM_SEARCH_STATIC,50,38,50,8
+	EDITTEXT        IDC_PLUGINADM_SEARCH_EDIT,160,35,150,14,ES_AUTOHSCROLL
 	PUSHBUTTON      "Next", IDC_PLUGINADM_RESEARCH_NEXT,332,35,57,14
 	PUSHBUTTON      "Install", IDC_PLUGINADM_INSTALL,432,35,57,14
 	PUSHBUTTON      "Update", IDC_PLUGINADM_UPDATE,432,35,57,14
