--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -932,6 +932,12 @@ BEGIN
 			MENUITEM "Generate from files...",                 IDM_TOOL_MD5_GENERATEFROMFILE
 			MENUITEM "Generate from selection into clipboard", IDM_TOOL_MD5_GENERATEINTOCLIPBOARD
         END
+		POPUP "SHA-256"
+		BEGIN
+			MENUITEM "Generate...", IDM_TOOL_SHA256_GENERATE
+			MENUITEM "Generate from files...", IDM_TOOL_SHA256_GENERATEFROMFILE
+			MENUITEM "Generate from selection into clipboard", IDM_TOOL_SHA256_GENERATEINTOCLIPBOARD
+		END
     END
 	
 	POPUP "&Macro"
