Fix a compiling error due to bad formatted ressource file.

--- a/PowerEditor/src/MISC/md5/md5Dlgs.rc
+++ b/PowerEditor/src/MISC/md5/md5Dlgs.rc
@@ -39,9 +39,8 @@ EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Generate MD5 digest"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "Treat each line as a separate string",IDC_HASH_EACHLINE_CHECK,
-    EDITTEXT        IDC_HASH_TEXT_EDIT,9,21,340,64,ES_MULTILINE | ES_AUTOVSCROLL | NOT WS_BORDER | WS_VSCROLL | WS_HSCROLL,WS_EX_CLIENTEDGE
-                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,9,3,179,16
+    CONTROL         "Treat each line as a separate string",IDC_HASH_EACHLINE_CHECK,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,9,3,179,16
+	EDITTEXT        IDC_HASH_TEXT_EDIT, 9, 21, 340, 64, ES_MULTILINE | ES_AUTOVSCROLL | NOT WS_BORDER | WS_VSCROLL | WS_HSCROLL, WS_EX_CLIENTEDGE
     EDITTEXT        IDC_HASH_RESULT_FOMTEXT_EDIT,9,105,340,64,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | NOT WS_BORDER | WS_VSCROLL | WS_HSCROLL,WS_EX_CLIENTEDGE
     PUSHBUTTON      "Copy to Clipboard",IDC_HASH_FROMTEXT_TOCLIPBOARD_BUTTON,259,172,90,14
     PUSHBUTTON      "Close",IDCANCEL,148,190,60,14
