Add "No to All" and "Yes to All" options in Save dialog
It allows users, while closing files, to reply Yes or No only for once in Save dialog for the all rest of modified files.

Close #5835 , close #4385,  close #4392

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -1029,10 +1029,22 @@ CAPTION "Debug Info"
 FONT 8, TEXT("MS Shell Dlg"), 0, 0, 0x1
 BEGIN
     EDITTEXT        IDC_DEBUGINFO_EDIT,31,20,220,96,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | NOT WS_BORDER | WS_VSCROLL
-		LTEXT           "Copy debug info into clipboard",IDC_DEBUGINFO_COPYLINK,31,120,126,8
+    LTEXT           "Copy debug info into clipboard",IDC_DEBUGINFO_COPYLINK,31,120,126,8
     DEFPUSHBUTTON   "OK",IDOK,106,160,50,14,BS_FLAT
 END
 
+IDD_DOSAVEORNOTBOX DIALOGEX 0, 0, 350, 115
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_MAXIMIZEBOX | WS_THICKFRAME
+CAPTION "Save"
+FONT 8, TEXT("MS Shell Dlg"), 0, 0, 0x1
+BEGIN
+    LTEXT           "",IDC_DOSAVEORNOTTEX,30,30,126,126
+    DEFPUSHBUTTON   "Yes",IDYES,50,85,50,14,BS_FLAT
+    PUSHBUTTON   "No",IDNO,105,85,50,14,BS_FLAT
+    PUSHBUTTON   "Cancel",IDCANCEL,160,85,50,14,BS_FLAT
+    PUSHBUTTON   "Yes to all",IDRETRY,215,85,60,14,BS_FLAT
+    PUSHBUTTON   "No to all",IDIGNORE,280,85,60,14,BS_FLAT
+END
 
 IDD_GOLINE DIALOGEX 26, 41, 261, 88
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
