Enhance Save dialog GUI
Close #5587

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -1033,17 +1033,17 @@ BEGIN
     DEFPUSHBUTTON   "OK",IDOK,106,160,50,14,BS_FLAT
 END
 
-IDD_DOSAVEORNOTBOX DIALOGEX 0, 0, 350, 115
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_MAXIMIZEBOX | WS_THICKFRAME
+IDD_DOSAVEORNOTBOX DIALOGEX 0, 0, 310, 80
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "Save"
 FONT 8, TEXT("MS Shell Dlg"), 0, 0, 0x1
 BEGIN
-    LTEXT           "",IDC_DOSAVEORNOTTEX,30,30,126,126
-    DEFPUSHBUTTON   "Yes",IDYES,50,85,50,14,BS_FLAT
-    PUSHBUTTON   "No",IDNO,105,85,50,14,BS_FLAT
-    PUSHBUTTON   "Cancel",IDCANCEL,160,85,50,14,BS_FLAT
-    PUSHBUTTON   "Yes to all",IDRETRY,215,85,60,14,BS_FLAT
-    PUSHBUTTON   "No to all",IDIGNORE,280,85,60,14,BS_FLAT
+    LTEXT           "",IDC_DOSAVEORNOTTEX,7,10,290,40
+    DEFPUSHBUTTON   "Yes",IDYES,10,60,50,14,BS_FLAT
+    PUSHBUTTON   "No",IDNO,65,60,50,14,BS_FLAT
+    PUSHBUTTON   "Cancel",IDCANCEL,120,60,50,14,BS_FLAT
+    PUSHBUTTON   "Yes to all",IDRETRY,175,60,60,14,BS_FLAT
+    PUSHBUTTON   "No to all",IDIGNORE,240,60,60,14,BS_FLAT
 END
 
 IDD_GOLINE DIALOGEX 26, 41, 261, 88
