Make Save dialog not resizable

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -1034,7 +1034,8 @@ BEGIN
 END
 
 IDD_DOSAVEORNOTBOX DIALOGEX 0, 0, 310, 80
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_TOOLWINDOW | WS_EX_WINDOWEDGE
 CAPTION "Save"
 FONT 8, TEXT("MS Shell Dlg"), 0, 0, 0x1
 BEGIN
