Improve GUI in Find dialog
Thanx to:
https://github.com/notepad-plus-plus/notepad-plus-plus/issues/449#issuecomment-135799762

--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -68,8 +68,8 @@ BEGIN
                     "Button",BS_AUTORADIOBUTTON,12,155,145,10
     CONTROL         "Re&gular expression",IDREGEXP,"Button",BS_AUTORADIOBUTTON,12,167,78,10
     CONTROL         "&. matches newline",IDREDOTMATCHNL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,93,167,68,9
-    PUSHBUTTON      "<<    ", IDC_FINDPREV, 268, 20, 45, 14, WS_GROUP | BS_MULTILINE
-    PUSHBUTTON      "    >>", IDC_FINDNEXT, 313, 20, 45, 14, WS_GROUP | BS_MULTILINE
+    PUSHBUTTON      "", IDC_FINDPREV, 268, 20, 18, 14, WS_GROUP | BS_MULTILINE
+    PUSHBUTTON      "", IDC_FINDNEXT, 289, 20, 70, 14, WS_GROUP | BS_MULTILINE
     PUSHBUTTON      "Find Next",IDOK,268,20,91,14,WS_GROUP
 	CONTROL         "", IDC_2_BUTTONS_MODE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 363, 20, 15, 15
     PUSHBUTTON      "Coun&t",IDCCOUNTALL,268,38,91,14
