Change shortcut for avoiding the clash
Change shortcut of "Replace All in All Opened Documents" from &o to &u.

Close #2276

--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -77,7 +77,7 @@ BEGIN
     PUSHBUTTON      "Find All in Current &Document",IDC_FINDALL_CURRENTFILE,268,80,91,21,BS_MULTILINE
     PUSHBUTTON      "&Replace",IDREPLACE,268,38,91,14
     PUSHBUTTON      "Replace &All",IDREPLACEALL,268,56,91,14
-    PUSHBUTTON      "Replace All in All &Opened Documents",IDC_REPLACE_OPENEDFILES,268,74,91,21,BS_MULTILINE
+    PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,268,74,91,21,BS_MULTILINE
     PUSHBUTTON      "Find All",IDD_FINDINFILES_FIND_BUTTON,268,20,91,14,WS_GROUP
     PUSHBUTTON      "&Replace in Files",IDD_FINDINFILES_REPLACEINFILES,268,38,91,14
     PUSHBUTTON      "Close",IDCANCEL,268,98,91,14
