Make backward-dir checkbox be shown on Find window's Mark tab
Fix #5974, close #6016

--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -53,7 +53,7 @@ BEGIN
     CONTROL         "In &hidden folders",IDD_FINDINFILES_INHIDDENDIR_CHECK,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,270,101,94,15
     CONTROL         "Book&mark line",IDC_MARKLINE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,52,100,15
-    CONTROL         "Purge for each search",IDC_PURGE_CHECK,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,66,99,16
+    CONTROL         "Purge for each search",IDC_PURGE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,64,99,15
     PUSHBUTTON      "Mark All",IDCMARKALL,268,20,91,14
     GROUPBOX        "",IDC_REPLACEINSELECTION,192,50,170,23
     CONTROL         "In select&ion",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,200,58,59,10
