--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -970,17 +970,17 @@ BEGIN
     BEGIN
         MENUITEM "Command Line Arguments...",      IDM_CMDLINEARGUMENTS
         MENUITEM SEPARATOR
-        MENUITEM "Notepad++ Home",            IDM_HOMESWEETHOME
-        MENUITEM "Notepad++ Project Page",    IDM_PROJECTPAGE
-        MENUITEM "Notepad++ Community (Forum)",                     IDM_FORUM
-		MENUITEM "Live Support",				IDM_ONLINESUPPORT
-        //MENUITEM "Get More Plugins",          IDM_PLUGINSHOME
+        MENUITEM "Notepad++ Home",                 IDM_HOMESWEETHOME
+        MENUITEM "Notepad++ Project Page",         IDM_PROJECTPAGE
+		MENUITEM "Notepad++ Online Document",      IDM_ONLINEDOCUMENT
+        MENUITEM "Notepad++ Community (Forum)",    IDM_FORUM
+		MENUITEM "Live Support",				   IDM_ONLINESUPPORT
         MENUITEM SEPARATOR
-        MENUITEM "Update Notepad++",          IDM_UPDATE_NPP
-		MENUITEM "Set Updater Proxy...",         IDM_CONFUPDATERPROXY
+        MENUITEM "Update Notepad++",               IDM_UPDATE_NPP
+		MENUITEM "Set Updater Proxy...",           IDM_CONFUPDATERPROXY
 		MENUITEM SEPARATOR
-        MENUITEM "Debug Info...",           IDM_DEBUGINFO
-        MENUITEM "About Notepad++",           IDM_ABOUT
+        MENUITEM "Debug Info...",                  IDM_DEBUGINFO
+        MENUITEM "About Notepad++",                IDM_ABOUT
     END
 
     MENUITEM "X",    IDM_FILE_CLOSE, HELP
@@ -1012,10 +1012,10 @@ BEGIN
 	//CONTROL         "", IDI_SAMESEXMARRIAGE,"Static",SS_OWNERDRAW,20,5,64,64
     LTEXT           NOTEPAD_PLUS_VERSION, IDC_STATIC,70,20,140,11
     LTEXT           "bit",IDC_VERSION_BIT,150,20,140,11
-    LTEXT           "Author :",IDC_STATIC,21,45,31,8
-    LTEXT           "Notepad++ team",IDC_AUTHOR_NAME,78,45,70,8
-    LTEXT           "Home Page :",IDC_STATIC,21,59,47,8
-    LTEXT           "https://notepad-plus-plus.org/",IDC_HOME_ADDR,78,59,126,8
+    //LTEXT           "Author :",IDC_STATIC,21,45,31,8
+    //LTEXT           "Notepad++ team",IDC_AUTHOR_NAME,78,45,70,8
+    LTEXT           "Home:",IDC_STATIC,21,45,47,8
+    LTEXT           "https://notepad-plus-plus.org/",IDC_HOME_ADDR,50,45,126,8
     GROUPBOX        "GNU General Public Licence",IDC_STATIC,19,75,231,131,BS_CENTER
     DEFPUSHBUTTON   "OK",IDOK,106,215,50,14,BS_FLAT
     // IDC_LICENCE_EDIT should be the last line, don't know why
