Add shortcuts to Save or not dialog
ALT-Y for Yes
ALT-N for No
ALT-C for Cancel
ALT-A for Yes to all
ALT-O for No to all

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -1040,11 +1040,11 @@ CAPTION "Save"
 FONT 8, TEXT("MS Shell Dlg"), 0, 0, 0x1
 BEGIN
     LTEXT           "",IDC_DOSAVEORNOTTEX,7,10,290,40
-    DEFPUSHBUTTON   "Yes",IDYES,10,60,50,14,BS_FLAT
-    PUSHBUTTON   "No",IDNO,65,60,50,14,BS_FLAT
-    PUSHBUTTON   "Cancel",IDCANCEL,120,60,50,14,BS_FLAT
-    PUSHBUTTON   "Yes to all",IDRETRY,175,60,60,14,BS_FLAT
-    PUSHBUTTON   "No to all",IDIGNORE,240,60,60,14,BS_FLAT
+    DEFPUSHBUTTON   "&Yes",IDYES,10,60,50,14,BS_FLAT
+    PUSHBUTTON   "&No",IDNO,65,60,50,14,BS_FLAT
+    PUSHBUTTON   "&Cancel",IDCANCEL,120,60,50,14,BS_FLAT
+    PUSHBUTTON   "Yes to &all",IDRETRY,175,60,60,14,BS_FLAT
+    PUSHBUTTON   "N&o to all",IDIGNORE,240,60,60,14,BS_FLAT
 END
 
 IDD_GOLINE DIALOGEX 26, 41, 261, 88
