Add tooltip for filter usage in Find in Files dialog

--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -41,7 +41,7 @@ BEGIN
     COMBOBOX        IDFINDWHAT,83,20,178,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
     RTEXT           "Rep&lace with :",ID_STATICTEXT_REPLACE,6,40,75,8
     COMBOBOX        IDREPLACEWITH,83,38,178,50,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    RTEXT           "Filter&s :",IDD_FINDINFILES_FILTERS_STATIC,27,58,53,8
+    RTEXT           "Filter&s :",IDD_FINDINFILES_FILTERS_STATIC,27,58,53,8, SS_NOTIFY
     COMBOBOX        IDD_FINDINFILES_FILTERS_COMBO,83,56,178,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
     RTEXT           "Dir&ectory :",IDD_FINDINFILES_DIR_STATIC,7,76,40,8
     COMBOBOX        IDD_FINDINFILES_DIR_COMBO,49,74,190,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
