Add feature to select/show current file in Folder As Workspace
A new button is added in Folder As Workspace to select and show the current editing file in Folder As Workspace.

To make Bitmap background transparent with alpha channel in photoshop:
https://www.youtube.com/watch?v=8hNEJ7kaw8g&feature=emb_logo

Close #7736

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -206,13 +206,14 @@ IDI_PROJECT_FILEINVALID         BITMAP      "icons/project_file_invalid.bmp"
 IDI_FB_ROOTOPEN                 BITMAP      "icons/fb_root_open.bmp"
 IDI_FB_ROOTCLOSE                BITMAP      "icons/fb_root_close.bmp"
 
+IDI_FB_SELECTCURRENTFILE        BITMAP      "icons/fb_select_current_file.bmp"
+
 IDI_FUNCLIST_ROOT               BITMAP      "icons/project_file.bmp"
 IDI_FUNCLIST_NODE               BITMAP      "icons/funcList_node.bmp"
 IDI_FUNCLIST_LEAF               BITMAP      "icons/funcList_leaf.bmp"
 
 IDI_FUNCLIST_SORTBUTTON         BITMAP      "icons/funclstSort.bmp"
 IDI_FUNCLIST_RELOADBUTTON       BITMAP      "icons/funclstReload.bmp"
-
 
 IDI_VIEW_DOC_MAP_ON_ICON        ICON        "icons/docMap_on.ico"
 IDI_VIEW_DOC_MAP_OFF_ICON       ICON        "icons/docMap_off.ico" 
