--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -63,9 +63,9 @@ END
 // remains consistent on all systems.
 IDI_M30ICON                     ICON      "icons/npp.ico"
 IDI_CHAMELEON                   ICON      "icons/chameleon.ico"
-//IDI_JESUISCHARLIE               ICON      "icons/Je_suis_Charlie.ico"
-//IDI_GILETJAUNE               ICON      "icons/giletJaune.ico"
-//IDI_SAMESEXMARRIAGE               ICON      "icons/same-sexMarriageTaiwan.ico"
+//IDI_JESUISCHARLIE             ICON      "icons/Je_suis_Charlie.ico"
+//IDI_GILETJAUNE                ICON      "icons/giletJaune.ico"
+//IDI_SAMESEXMARRIAGE           ICON      "icons/same-sexMarriageTaiwan.ico"
 IDI_NEW_OFF_ICON                ICON      "icons/new_off.ico"
 IDI_OPEN_OFF_ICON               ICON      "icons/open_off.ico"
 IDI_SAVE_OFF_ICON               ICON      "icons/save_off.ico"
@@ -233,13 +233,13 @@ BEGIN
     BEGIN
         MENUITEM "&New",                             IDM_FILE_NEW
         MENUITEM "&Open...",                         IDM_FILE_OPEN
-		POPUP "Open Containing Folder"
-		BEGIN
+        POPUP "Open Containing Folder"
+        BEGIN
             MENUITEM "Explorer",       IDM_FILE_OPEN_FOLDER
             MENUITEM "cmd",            IDM_FILE_OPEN_CMD
-		END
+        END
         MENUITEM "Open in Default Viewer",           IDM_FILE_OPEN_DEFAULT_VIEWER
-		MENUITEM "Open Folder as Workspace...",      IDM_FILE_OPENFOLDERASWORSPACE
+        MENUITEM "Open Folder as Workspace...",      IDM_FILE_OPENFOLDERASWORSPACE
         MENUITEM "Re&load from Disk",                IDM_FILE_RELOAD
         MENUITEM "&Save",                            IDM_FILE_SAVE
         MENUITEM "Save &As...",                      IDM_FILE_SAVEAS
@@ -248,13 +248,13 @@ BEGIN
         MENUITEM "Rename...",                        IDM_FILE_RENAME
         MENUITEM "&Close",                           IDM_FILE_CLOSE
         MENUITEM "Clos&e All",                       IDM_FILE_CLOSEALL
-		POPUP "Close More"
-		BEGIN
-			MENUITEM "Close All but Active Document",    IDM_FILE_CLOSEALL_BUT_CURRENT
-			MENUITEM "Close All to the Left",			 IDM_FILE_CLOSEALL_TOLEFT
-			MENUITEM "Close All to the Right",			 IDM_FILE_CLOSEALL_TORIGHT
-			MENUITEM "Close All Unchanged",				 IDM_FILE_CLOSEALL_UNCHANGED
-		END
+        POPUP "Close More"
+        BEGIN
+            MENUITEM "Close All but Active Document",    IDM_FILE_CLOSEALL_BUT_CURRENT
+            MENUITEM "Close All to the Left",            IDM_FILE_CLOSEALL_TOLEFT
+            MENUITEM "Close All to the Right",           IDM_FILE_CLOSEALL_TORIGHT
+            MENUITEM "Close All Unchanged",              IDM_FILE_CLOSEALL_UNCHANGED
+        END
         MENUITEM "Move to Recycle Bin",              IDM_FILE_DELETE
         MENUITEM SEPARATOR
         MENUITEM "Load Session...",                  IDM_FILE_LOADSESSION
@@ -276,7 +276,7 @@ BEGIN
         MENUITEM "&Paste",                           IDM_EDIT_PASTE
         MENUITEM "&Delete",                          IDM_EDIT_DELETE
         MENUITEM "Select A&ll",                      IDM_EDIT_SELECTALL
-		MENUITEM "Begin/End Select",                 IDM_EDIT_BEGINENDSELECT
+        MENUITEM "Begin/End Select",                 IDM_EDIT_BEGINENDSELECT
         MENUITEM SEPARATOR
         POPUP "Copy to Clipboard"
         BEGIN
@@ -293,7 +293,7 @@ BEGIN
         BEGIN
             MENUITEM "&UPPERCASE",              IDM_EDIT_UPPERCASE
             MENUITEM "&lowercase",              IDM_EDIT_LOWERCASE
-			MENUITEM "&Proper Case",            IDM_EDIT_PROPERCASE_FORCE
+            MENUITEM "&Proper Case",            IDM_EDIT_PROPERCASE_FORCE
             MENUITEM "Proper Case (blend)",      IDM_EDIT_PROPERCASE_BLEND
             MENUITEM "&Sentence case",          IDM_EDIT_SENTENCECASE_FORCE
             MENUITEM "Sentence case (blend)",   IDM_EDIT_SENTENCECASE_BLEND
@@ -308,21 +308,21 @@ BEGIN
             MENUITEM "Join Lines",                                       IDM_EDIT_JOIN_LINES
             MENUITEM "Move Up Current Line",                             IDM_EDIT_LINE_UP
             MENUITEM "Move Down Current Line",                           IDM_EDIT_LINE_DOWN
-			MENUITEM "Remove Empty Lines",                               IDM_EDIT_REMOVEEMPTYLINES
-			MENUITEM "Remove Empty Lines (Containing Blank characters)", IDM_EDIT_REMOVEEMPTYLINESWITHBLANK
-			MENUITEM "Insert Blank Line Above Current",                  IDM_EDIT_BLANKLINEABOVECURRENT
-			MENUITEM "Insert Blank Line Below Current",                  IDM_EDIT_BLANKLINEBELOWCURRENT
-			MENUITEM SEPARATOR
-			MENUITEM "Sort Lines Lexicographically Ascending",		     IDM_EDIT_SORTLINES_LEXICOGRAPHIC_ASCENDING
-			MENUITEM "Sort Lines As Integers Ascending",			     IDM_EDIT_SORTLINES_INTEGER_ASCENDING
-			MENUITEM "Sort Lines As Decimals (Comma) Ascending",	     IDM_EDIT_SORTLINES_DECIMALCOMMA_ASCENDING
-			MENUITEM "Sort Lines As Decimals (Dot) Ascending",		     IDM_EDIT_SORTLINES_DECIMALDOT_ASCENDING
-			MENUITEM SEPARATOR
-			MENUITEM "Sort Lines Lexicographically Descending",		     IDM_EDIT_SORTLINES_LEXICOGRAPHIC_DESCENDING
-			MENUITEM "Sort Lines As Integers Descending",			     IDM_EDIT_SORTLINES_INTEGER_DESCENDING
-			MENUITEM "Sort Lines As Decimals (Comma) Descending",	     IDM_EDIT_SORTLINES_DECIMALCOMMA_DESCENDING
-			MENUITEM "Sort Lines As Decimals (Dot) Descending",		     IDM_EDIT_SORTLINES_DECIMALDOT_DESCENDING
-		END
+            MENUITEM "Remove Empty Lines",                               IDM_EDIT_REMOVEEMPTYLINES
+            MENUITEM "Remove Empty Lines (Containing Blank characters)", IDM_EDIT_REMOVEEMPTYLINESWITHBLANK
+            MENUITEM "Insert Blank Line Above Current",                  IDM_EDIT_BLANKLINEABOVECURRENT
+            MENUITEM "Insert Blank Line Below Current",                  IDM_EDIT_BLANKLINEBELOWCURRENT
+            MENUITEM SEPARATOR
+            MENUITEM "Sort Lines Lexicographically Ascending",           IDM_EDIT_SORTLINES_LEXICOGRAPHIC_ASCENDING
+            MENUITEM "Sort Lines As Integers Ascending",                 IDM_EDIT_SORTLINES_INTEGER_ASCENDING
+            MENUITEM "Sort Lines As Decimals (Comma) Ascending",         IDM_EDIT_SORTLINES_DECIMALCOMMA_ASCENDING
+            MENUITEM "Sort Lines As Decimals (Dot) Ascending",           IDM_EDIT_SORTLINES_DECIMALDOT_ASCENDING
+            MENUITEM SEPARATOR
+            MENUITEM "Sort Lines Lexicographically Descending",          IDM_EDIT_SORTLINES_LEXICOGRAPHIC_DESCENDING
+            MENUITEM "Sort Lines As Integers Descending",                IDM_EDIT_SORTLINES_INTEGER_DESCENDING
+            MENUITEM "Sort Lines As Decimals (Comma) Descending",        IDM_EDIT_SORTLINES_DECIMALCOMMA_DESCENDING
+            MENUITEM "Sort Lines As Decimals (Dot) Descending",          IDM_EDIT_SORTLINES_DECIMALDOT_DESCENDING
+        END
         POPUP "Comment/Uncomment"
         BEGIN
             MENUITEM "Toggle Single Line Comment",    IDM_EDIT_BLOCK_COMMENT
@@ -336,7 +336,7 @@ BEGIN
             MENUITEM "Function Completion",         IDM_EDIT_AUTOCOMPLETE
             MENUITEM "Word Completion",             IDM_EDIT_AUTOCOMPLETE_CURRENTFILE
             MENUITEM "Function Parameters Hint",    IDM_EDIT_FUNCCALLTIP
-			MENUITEM "Path Completion",				IDM_EDIT_AUTOCOMPLETE_PATH
+            MENUITEM "Path Completion",             IDM_EDIT_AUTOCOMPLETE_PATH
         END
         POPUP "EOL Conversion"
         BEGIN
@@ -365,14 +365,14 @@ BEGIN
             MENUITEM "Cut Binary Content",                 IDM_EDIT_CUT_BINARY
             MENUITEM "Paste Binary Content",               IDM_EDIT_PASTE_BINARY
         END
-		POPUP "On Selection"
-		BEGIN
-			MENUITEM "Open File",           IDM_EDIT_OPENASFILE
-			MENUITEM "Open Containing Folder in Explorer",         IDM_EDIT_OPENINFOLDER
-			MENUITEM SEPARATOR
-			MENUITEM "Search on Internet",     IDM_EDIT_SEARCHONINTERNET
-			MENUITEM "Change Search Engine...", IDM_EDIT_CHANGESEARCHENGINE
-		END
+        POPUP "On Selection"
+        BEGIN
+            MENUITEM "Open File",           IDM_EDIT_OPENASFILE
+            MENUITEM "Open Containing Folder in Explorer",         IDM_EDIT_OPENINFOLDER
+            MENUITEM SEPARATOR
+            MENUITEM "Search on Internet",     IDM_EDIT_SEARCHONINTERNET
+            MENUITEM "Change Search Engine...", IDM_EDIT_CHANGESEARCHENGINE
+        END
         MENUITEM SEPARATOR
         MENUITEM "Column Mode...",        IDM_EDIT_COLUMNMODETIP
         MENUITEM "Column Editor...",        IDM_EDIT_COLUMNMODE
@@ -464,14 +464,14 @@ BEGIN
         MENUITEM "Post-It",                    IDM_VIEW_POSTIT
 
         MENUITEM SEPARATOR
-		POPUP "View Current File in"
-		BEGIN
-			MENUITEM "Firefox", IDM_VIEW_IN_FIREFOX
-			MENUITEM "Chrome", IDM_VIEW_IN_CHROME
-			MENUITEM "Edge", IDM_VIEW_IN_EDGE
-			MENUITEM "IE", IDM_VIEW_IN_IE
-		END
-		MENUITEM SEPARATOR
+        POPUP "View Current File in"
+        BEGIN
+            MENUITEM "Firefox", IDM_VIEW_IN_FIREFOX
+            MENUITEM "Chrome", IDM_VIEW_IN_CHROME
+            MENUITEM "Edge", IDM_VIEW_IN_EDGE
+            MENUITEM "IE", IDM_VIEW_IN_IE
+        END
+        MENUITEM SEPARATOR
         POPUP "Show Symbol"
         BEGIN
             MENUITEM "Show White Space and TAB",    IDM_VIEW_TAB_SPACE
@@ -494,25 +494,25 @@ BEGIN
             MENUITEM "Move to New Instance",    IDM_VIEW_GOTO_NEW_INSTANCE
             MENUITEM "Open in New Instance",    IDM_VIEW_LOAD_IN_NEW_INSTANCE
         END
-		
-		POPUP "Tab"
-		BEGIN
-			MENUITEM "1st Tab",					IDM_VIEW_TAB1
-			MENUITEM "2nd Tab",					IDM_VIEW_TAB2
-			MENUITEM "3rd Tab",					IDM_VIEW_TAB3
-			MENUITEM "4th Tab",					IDM_VIEW_TAB4
-			MENUITEM "5th Tab",					IDM_VIEW_TAB5
-			MENUITEM "6th Tab",					IDM_VIEW_TAB6
-			MENUITEM "7th Tab",					IDM_VIEW_TAB7
-			MENUITEM "8th Tab",					IDM_VIEW_TAB8
-			MENUITEM "9th Tab",					IDM_VIEW_TAB9
-			MENUITEM SEPARATOR
-			MENUITEM "Next Tab",				IDM_VIEW_TAB_NEXT
-			MENUITEM "Previous Tab",			IDM_VIEW_TAB_PREV
-			MENUITEM SEPARATOR
-			MENUITEM "Move Tab Forward",		IDM_VIEW_TAB_MOVEFORWARD
-			MENUITEM "Move Tab Backward",		IDM_VIEW_TAB_MOVEBACKWARD
-		END
+        
+        POPUP "Tab"
+        BEGIN
+            MENUITEM "1st Tab",                 IDM_VIEW_TAB1
+            MENUITEM "2nd Tab",                 IDM_VIEW_TAB2
+            MENUITEM "3rd Tab",                 IDM_VIEW_TAB3
+            MENUITEM "4th Tab",                 IDM_VIEW_TAB4
+            MENUITEM "5th Tab",                 IDM_VIEW_TAB5
+            MENUITEM "6th Tab",                 IDM_VIEW_TAB6
+            MENUITEM "7th Tab",                 IDM_VIEW_TAB7
+            MENUITEM "8th Tab",                 IDM_VIEW_TAB8
+            MENUITEM "9th Tab",                 IDM_VIEW_TAB9
+            MENUITEM SEPARATOR
+            MENUITEM "Next Tab",                IDM_VIEW_TAB_NEXT
+            MENUITEM "Previous Tab",            IDM_VIEW_TAB_PREV
+            MENUITEM SEPARATOR
+            MENUITEM "Move Tab Forward",        IDM_VIEW_TAB_MOVEFORWARD
+            MENUITEM "Move Tab Backward",       IDM_VIEW_TAB_MOVEBACKWARD
+        END
         MENUITEM "Word wrap",                   IDM_VIEW_WRAP
         MENUITEM "Focus on Another View",         IDM_VIEW_SWITCHTO_OTHER_VIEW
         MENUITEM "Hide Lines",                  IDM_VIEW_HIDELINES
@@ -553,7 +553,7 @@ BEGIN
                 MENUITEM "Project Panel 2",          IDM_VIEW_PROJECT_PANEL_2
                 MENUITEM "Project Panel 3",          IDM_VIEW_PROJECT_PANEL_3
             END
-		MENUITEM "Folder as Workspace",   IDM_VIEW_FILEBROWSER
+        MENUITEM "Folder as Workspace",   IDM_VIEW_FILEBROWSER
         MENUITEM "Document Map",          IDM_VIEW_DOC_MAP
         MENUITEM "Function List",         IDM_VIEW_FUNC_LIST
         MENUITEM SEPARATOR
@@ -562,8 +562,8 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "Text Direction RTL",                  IDM_EDIT_RTL
         MENUITEM "Text Direction LTR",                  IDM_EDIT_LTR
-		MENUITEM SEPARATOR
-		MENUITEM "Monitoring (tail -f)",    IDM_VIEW_MONITORING
+        MENUITEM SEPARATOR
+        MENUITEM "Monitoring (tail -f)",    IDM_VIEW_MONITORING
     END
 
     POPUP "E&ncoding"
@@ -655,7 +655,7 @@ BEGIN
 
             POPUP "Thai"
             BEGIN
-			    MENUITEM "TIS-620",                 IDM_FORMAT_TIS_620
+                MENUITEM "TIS-620",                 IDM_FORMAT_TIS_620
             END
 
             POPUP "Turkish"
@@ -724,12 +724,12 @@ BEGIN
         MENUITEM "Gui4Cli",                 IDM_LANG_GUI4CLI
         MENUITEM "Haskell",                 IDM_LANG_HASKELL
         MENUITEM "HTML",                    IDM_LANG_HTML
-		MENUITEM "INI file",                IDM_LANG_INI
+        MENUITEM "INI file",                IDM_LANG_INI
         MENUITEM "Inno Setup",              IDM_LANG_INNO
         MENUITEM "Intel HEX",               IDM_LANG_IHEX
         MENUITEM "Java",                    IDM_LANG_JAVA
         MENUITEM "JavaScript",              IDM_LANG_JS
-		MENUITEM "JSON",                    IDM_LANG_JSON
+        MENUITEM "JSON",                    IDM_LANG_JSON
         MENUITEM "JSP",                     IDM_LANG_JSP
         MENUITEM "KIXtart",                 IDM_LANG_KIX
         MENUITEM "LISP",                    IDM_LANG_LISP
@@ -764,7 +764,7 @@ BEGIN
         MENUITEM "Smalltalk",               IDM_LANG_SMALLTALK
         MENUITEM "Spice",                   IDM_LANG_SPICE
         MENUITEM "SQL",                     IDM_LANG_SQL
-		MENUITEM "Swift",                  IDM_LANG_SWIFT
+        MENUITEM "Swift",                  IDM_LANG_SWIFT
         MENUITEM "S-Record",                IDM_LANG_SREC
         MENUITEM "TCL",                     IDM_LANG_TCL
         MENUITEM "Tektronix extended HEX",  IDM_LANG_TEHEX
@@ -809,7 +809,7 @@ BEGIN
         MENUITEM "CMake",                 IDM_LANG_CMAKE
         MENUITEM "COBOL",                 IDM_LANG_COBOL
         MENUITEM "CSound",                IDM_LANG_CSOUND
-		MENUITEM "CoffeeScript",          IDM_LANG_COFFEESCRIPT
+        MENUITEM "CoffeeScript",          IDM_LANG_COFFEESCRIPT
         MENUITEM "CSS",                   IDM_LANG_CSS
     END
     POPUP "D"
@@ -835,12 +835,12 @@ BEGIN
         MENUITEM "Haskell",               IDM_LANG_HASKELL
         MENUITEM "HTML",                  IDM_LANG_HTML
     END
-	POPUP "I"
-	BEGIN
-		MENUITEM "INI file",              IDM_LANG_INI
-		MENUITEM "Inno Setup",            IDM_LANG_INNO
-		MENUITEM "Intel HEX",             IDM_LANG_IHEX
-	END
+    POPUP "I"
+    BEGIN
+        MENUITEM "INI file",              IDM_LANG_INI
+        MENUITEM "Inno Setup",            IDM_LANG_INNO
+        MENUITEM "Intel HEX",             IDM_LANG_IHEX
+    END
     POPUP "J"
     BEGIN
         MENUITEM "Java",                  IDM_LANG_JAVA
@@ -874,7 +874,7 @@ BEGIN
         MENUITEM "Objective-C",           IDM_LANG_OBJC
         MENUITEM "OScript",               IDM_LANG_OSCRIPT
     END
-	POPUP "P"
+    POPUP "P"
     BEGIN
         MENUITEM "Pascal",                IDM_LANG_PASCAL
         MENUITEM "Perl",                  IDM_LANG_PERL
@@ -901,7 +901,7 @@ BEGIN
         MENUITEM "Smalltalk",             IDM_LANG_SMALLTALK
         MENUITEM "Spice",                 IDM_LANG_SPICE
         MENUITEM "SQL",                   IDM_LANG_SQL
-		MENUITEM "Swift",                IDM_LANG_SWIFT
+        MENUITEM "Swift",                IDM_LANG_SWIFT
         MENUITEM "S-Record",              IDM_LANG_SREC
     END
     POPUP "T"
@@ -921,11 +921,11 @@ BEGIN
     MENUITEM "XML",                       IDM_LANG_XML
     MENUITEM "YAML",                      IDM_LANG_YAML
     MENUITEM SEPARATOR
-	POPUP "User Defined Language"
-	BEGIN
-		MENUITEM "Define your language...",   IDM_LANG_USER_DLG
-		MENUITEM "Open User Defined Language folder...",        IDM_LANG_OPENUDLDIR
-	END
+    POPUP "User Defined Language"
+    BEGIN
+        MENUITEM "Define your language...",   IDM_LANG_USER_DLG
+        MENUITEM "Open User Defined Language folder...",        IDM_LANG_OPENUDLDIR
+    END
     MENUITEM "User-Defined",              IDM_LANG_USER
     END
 
@@ -944,23 +944,23 @@ BEGIN
         MENUITEM "Edit Popup ContextMenu",      IDM_SETTING_EDITCONTEXTMENU
     END
 
-	POPUP "T&ools"
+    POPUP "T&ools"
     BEGIN
         POPUP "MD5"
-		BEGIN
-			MENUITEM "Generate...",                            IDM_TOOL_MD5_GENERATE
-			MENUITEM "Generate from files...",                 IDM_TOOL_MD5_GENERATEFROMFILE
-			MENUITEM "Generate from selection into clipboard", IDM_TOOL_MD5_GENERATEINTOCLIPBOARD
+        BEGIN
+            MENUITEM "Generate...",                            IDM_TOOL_MD5_GENERATE
+            MENUITEM "Generate from files...",                 IDM_TOOL_MD5_GENERATEFROMFILE
+            MENUITEM "Generate from selection into clipboard", IDM_TOOL_MD5_GENERATEINTOCLIPBOARD
         END
-		POPUP "SHA-256"
-		BEGIN
-			MENUITEM "Generate...", IDM_TOOL_SHA256_GENERATE
-			MENUITEM "Generate from files...", IDM_TOOL_SHA256_GENERATEFROMFILE
-			MENUITEM "Generate from selection into clipboard", IDM_TOOL_SHA256_GENERATEINTOCLIPBOARD
-		END
+        POPUP "SHA-256"
+        BEGIN
+            MENUITEM "Generate...", IDM_TOOL_SHA256_GENERATE
+            MENUITEM "Generate from files...", IDM_TOOL_SHA256_GENERATEFROMFILE
+            MENUITEM "Generate from selection into clipboard", IDM_TOOL_SHA256_GENERATEINTOCLIPBOARD
+        END
     END
-	
-	POPUP "&Macro"
+    
+    POPUP "&Macro"
     BEGIN
         MENUITEM "Start Re&cording",                   IDM_MACRO_STARTRECORDINGMACRO
         MENUITEM "S&top Recording",                    IDM_MACRO_STOPRECORDINGMACRO
@@ -980,13 +980,13 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "Notepad++ Home",                 IDM_HOMESWEETHOME
         MENUITEM "Notepad++ Project Page",         IDM_PROJECTPAGE
-		MENUITEM "Notepad++ Online Document",      IDM_ONLINEDOCUMENT
+        MENUITEM "Notepad++ Online Document",      IDM_ONLINEDOCUMENT
         MENUITEM "Notepad++ Community (Forum)",    IDM_FORUM
-		MENUITEM "Live Support",				   IDM_ONLINESUPPORT
+        MENUITEM "Live Support",                   IDM_ONLINESUPPORT
         MENUITEM SEPARATOR
         MENUITEM "Update Notepad++",               IDM_UPDATE_NPP
-		MENUITEM "Set Updater Proxy...",           IDM_CONFUPDATERPROXY
-		MENUITEM SEPARATOR
+        MENUITEM "Set Updater Proxy...",           IDM_CONFUPDATERPROXY
+        MENUITEM SEPARATOR
         MENUITEM "Debug Info...",                  IDM_DEBUGINFO
         MENUITEM "About Notepad++",                IDM_ABOUT
     END
@@ -1017,7 +1017,7 @@ BEGIN
     CONTROL         "",IDI_CHAMELEON,"Static",SS_OWNERDRAW,20,5,64,64
     //CONTROL         "",IDI_JESUISCHARLIE,"Static",SS_OWNERDRAW,20,5,64,64
     //CONTROL         "",IDI_GILETJAUNE,"Static",SS_OWNERDRAW,20,5,64,64
-	//CONTROL         "", IDI_SAMESEXMARRIAGE,"Static",SS_OWNERDRAW,20,5,64,64
+    //CONTROL         "", IDI_SAMESEXMARRIAGE,"Static",SS_OWNERDRAW,20,5,64,64
     LTEXT           NOTEPAD_PLUS_VERSION, IDC_STATIC,70,20,140,11
     LTEXT           "bit",IDC_VERSION_BIT,150,20,140,11
     //LTEXT           "Author :",IDC_STATIC,21,45,31,8
@@ -1074,8 +1074,7 @@ BEGIN
 END
 
 IDD_VALUE_DLG DIALOGEX 0, 0, 74, 17
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION |
-    WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 FONT 8, TEXT("MS Shell Dlg"), 0, 0, 0x1
 BEGIN
