--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -244,7 +244,7 @@ BEGIN
         MENUITEM "&Save",                            IDM_FILE_SAVE
         MENUITEM "Save &As...",                      IDM_FILE_SAVEAS
         MENUITEM "Save a Copy As...",                IDM_FILE_SAVECOPYAS
-        MENUITEM "Sav&e All",                        IDM_FILE_SAVEALL
+        MENUITEM "Sa&ve All",                        IDM_FILE_SAVEALL
         MENUITEM "Rename...",                        IDM_FILE_RENAME
         MENUITEM "&Close",                           IDM_FILE_CLOSE
         MENUITEM "Clos&e All",                       IDM_FILE_CLOSEALL
