更新一波质感图标

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 #-------------------------------------------------------------------------------
 # VisualStudio
 
+*.rar
+*.lnk
+
 #-- User-specific files
 *.suo
 *.user
