Enhance: Go To Line( with line:offset、Pin Dlg  )

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -1070,7 +1070,7 @@ BEGIN
     LTEXT           "You are here :",ID_URHERE_STATIC,5,34,95,8,NOT WS_GROUP
     LTEXT           "0123456789",ID_CURRLINE,100,34,45,8,NOT WS_GROUP
     LTEXT           "You want to &go to :",ID_UGO_STATIC,5,51,95,8
-    EDITTEXT        ID_GOLINE_EDIT,98,49,71,12,ES_NUMBER
+    EDITTEXT        ID_GOLINE_EDIT,98,49,71,12
     LTEXT           "You can't go further than :",ID_NOMORETHAN_STATIC,5,68,92,8,NOT WS_GROUP
     LTEXT           "0123456789",ID_LASTLINE,100,68,45,8,NOT WS_GROUP
     DEFPUSHBUTTON   "Go",IDOK,181,48,70,14,BS_NOTIFY
