--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -226,6 +226,8 @@ IDI_VIEW_FILEBROWSER_OFF_ICON   ICON        "icons/fileBrowser_off.ico"
 IDI_VIEW_MONITORING_ON_ICON     ICON        "icons/monitoring_on.ico"
 IDI_VIEW_MONITORING_OFF_ICON    ICON        "icons/monitoring_off.ico"
 
+IDR_PLUGIN_ICO             ICON      "icons/plugin.ico"
+
 
 IDR_M30_MENU MENU
 BEGIN
