--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -78,13 +78,13 @@ IDD_PREFERENCE_MARGEIN_BOX DIALOGEX 0, 0, 455, 209
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    GROUPBOX        "Folder Margin Style",IDC_FMS_GB_STATIC,5,46,83,100,BS_CENTER
+    GROUPBOX        "Folding style",IDC_FMS_GB_STATIC,5,46,83,90,BS_CENTER
     CONTROL         "Simple",IDC_RADIO_SIMPLE,"Button",BS_AUTORADIOBUTTON | WS_GROUP,14,59,59,10
     CONTROL         "Arrow",IDC_RADIO_ARROW,"Button",BS_AUTORADIOBUTTON,14,74,60,10
     CONTROL         "Circle tree",IDC_RADIO_CIRCLE,"Button",BS_AUTORADIOBUTTON,14,89,62,10
     CONTROL         "None",IDC_RADIO_FOLDMARGENONE,"Button",BS_AUTORADIOBUTTON,14,119,61,10
     CONTROL         "Box tree",IDC_RADIO_BOX,"Button",BS_AUTORADIOBUTTON,14,104,61,10
-    GROUPBOX        "Vertical Edge Settings",IDC_VES_GB_STATIC,95,46,182,157,BS_CENTER
+    GROUPBOX        "Column Marker",IDC_VES_GB_STATIC,95,46,182,157,BS_CENTER
     CONTROL         "Background mode",IDC_CHECK_EDGEBGMODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,107,179,122,13
     LTEXT           "Add your column marker by indicating its position with a decimal number.\nYou can define several column markers by using white space to separate the different numbers.",IDC_STATIC_MULTILNMODE_TIP,104,63,164,65
     EDITTEXT        IDC_COLUMNPOS_EDIT,117,134,125,36,ES_MULTILINE
@@ -95,16 +95,17 @@ BEGIN
     CONTROL         "",IDC_CARETBLINKRATE_SLIDER,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,104,24,67,13
     LTEXT           "S",IDC_CARETBLINKRATE_S_STATIC,173,24,12,12
     LTEXT           "F",IDC_CARETBLINKRATE_F_STATIC,92,24,12,14,0,WS_EX_RIGHT
-    GROUPBOX        "Multi-Editing Settings",IDC_MULTISELECTION_GB_STATIC,194,1,140,40,BS_CENTER
-    CONTROL         "Enable (Ctrl+Mouse click/selection)",IDC_CHECK_MULTISELECTION,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,202,18,130,10
+    GROUPBOX        "Multiple Catets",IDC_MULTISELECTION_GB_STATIC,194,1,140,40,BS_CENTER
+    CONTROL         "Enable (Ctrl+Select)",IDC_CHECK_MULTISELECTION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,202,18,82,10
     GROUPBOX        "Line Wrap",IDC_LW_GB_STATIC,338,2,84,56,BS_CENTER
     CONTROL         "Default",IDC_RADIO_LWDEF,"Button",BS_AUTORADIOBUTTON | WS_GROUP,348,15,59,10
     CONTROL         "Aligned",IDC_RADIO_LWALIGN,"Button",BS_AUTORADIOBUTTON,348,29,60,10
     CONTROL         "Indent",IDC_RADIO_LWINDENT,"Button",BS_AUTORADIOBUTTON,348,43,62,10
-    GROUPBOX        "Border Width",IDC_BORDERWIDTH_STATIC,4,157,85,45,BS_CENTER
-    CONTROL         "",IDC_BORDERWIDTH_SLIDER,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,7,170,67,13
-    LTEXT           "0",IDC_BORDERWIDTHVAL_STATIC,75,170,12,8
+    GROUPBOX        "Border Width",IDC_BORDERWIDTH_STATIC,4,137,85,65,BS_CENTER
+    CONTROL         "",IDC_BORDERWIDTH_SLIDER,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,7,151,67,13
+    LTEXT           "0",IDC_BORDERWIDTHVAL_STATIC,75,151,12,8
+    LTEXT           "0",IDC_BORDERXCompWIDTHVAL_STATIC,75,170,12,8
+    CONTROL         "",IDC_BORDERXCompWIDTH_SLIDER,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,7,170,67,13
     CONTROL         "No edge",IDC_CHECK_NOEDGE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,187,60,10
     CONTROL         "Display line number",IDC_CHECK_LINENUMBERMARGE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,284,61,170,13
     CONTROL         "Display bookmark",IDC_CHECK_BOOKMARKMARGE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,284,77,170,13
