Fix: Localization issue( caused by last commit )、Add: Tabbar CM item( Open Link  )
https://github.com/Roshni-P/notepad-plus-plus/commit/db5c73ebb9a33ae1931ed8e85db5c354537791b5

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -282,9 +282,9 @@ BEGIN
         MENUITEM SEPARATOR
         POPUP "Copy to Clipboard"
         BEGIN
+                MENUITEM "Filename to Clipboard",          IDM_EDIT_FILENAMETOCLIP
+                MENUITEM "Current Dir Path to Clipboard",         IDM_EDIT_CURRENTDIRTOCLIP
                 MENUITEM "Current Full File path to Clipboard",    IDM_EDIT_FULLPATHTOCLIP
-                MENUITEM "Current Filename to Clipboard",          IDM_EDIT_FILENAMETOCLIP
-                MENUITEM "Current Dir. Path to Clipboard",         IDM_EDIT_CURRENTDIRTOCLIP
         END
         POPUP "Indent"
         BEGIN
